--- a/package.json
+++ b/package.json
@@ -3,10 +3,22 @@
     "@parcel/transformer-sass": "^2.8.0",
     "@parcel/transformer-typescript-tsc": "^2.8.0",
     "@parcel/validator-typescript": "^2.8.0",
+    "@typescript-eslint/eslint-plugin": "^5.55.0",
     "buffer": "^5.7.1",
+    "eslint": "^8.36.0",
+    "eslint-config-standard-with-typescript": "^34.0.1",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-n": "^15.6.1",
+    "@types/node": "^18.15.3",
+    "@typescript-eslint/parser": "^5.55.0",
+    "eslint-config-prettier": "^8.7.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-promise": "^6.1.1",
+    "prettier": "2.8.4",
+    "sass": "^1.59.2",
     "parcel": "^2.8.0",
     "process": "^0.11.10",
-    "typescript": "^4.9.3"
+    "typescript": "^5.0.2"
   },
   "dependencies": {
     "axios": "^1.1.3"
